--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-
+        <a href="recipes/noodles.html" >Spicy Garlic Potato Noodles</a>
     </body>
 
 
